--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Croissant history</title>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="You are going to find here all what you need to know about the Croissant´s history"
+    />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="/style/style.css" />
@@ -16,9 +21,9 @@
       are made of a layered yeast-leavened dough
     </p>
     <div class="footer-links">
-      <a href="/">Homepage</a>
-      <a href="/second-pages/photo.html">Photo</a>
-      <a href="/second-pages/contact.html">Contact</a>
+      <a href="/" title="Croissant Homepage"> Homepage</a>
+      <a href="/second-pages/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/second-pages/contact.html" title="Contact me">Contact</a>
     </div>
   </body>
 </html>
