--- a/second-pages/contact.html
+++ b/second-pages/contact.html
@@ -17,9 +17,9 @@
     </p>
     <br />
     <div class="footer-links">
-      <a href="/">Homepage</a>
-      <a href="/second-pages/photo.html">Photo</a>
-      <a href="/second-pages/contact.html">Contact</a>
+      <a href="/" title="Croissant Homepage"> Homepage</a>
+      <a href="/second-pages/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/second-pages/contact.html" title="Contact me">Contact</a>
     </div>
   </body>
 </html>
