--- a/second-pages/photo.html
+++ b/second-pages/photo.html
@@ -11,12 +11,12 @@
   <body>
     <h1>A picture of a Croissant</h1>
 
-    <img src="/image/croissant.png" alt="" />
+    <img src="/image/croissant.png" alt="Croissant product" />
     <br />
     <div class="footer-links">
-      <a href="/"> Homepage</a>
-      <a href="/second-pages/photo.html">Photo</a>
-      <a href="/second-pages/contact.html">Contact</a>
+      <a href="/" title="Croissant Homepage"> Homepage</a>
+      <a href="/second-pages/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/second-pages/contact.html" title="Contact me">Contact</a>
     </div>
   </body>
 </html>
